แก้ไข - ตรง conversation-list เพิ่มเวลาล่าสุดที่มีการ chat -  แก้ไข switch ให้อยู่ตรงกลาง -  แก้ไขการแสดงข้อความให้สวยขึ้น - ทำให้ messages-input-text มีการ disabled - ทำให้ปุ่ม button มีการ disabled

--- a/button.css
+++ b/button.css
@@ -15,6 +15,15 @@
     cursor: pointer;
 }
 
+.button[disabled],
+.button-green:hover[disabled] {
+    background-color: #979797;
+    border: 2px solid #979797;
+    color: #FFF;
+    /* เป็นเมาส์ธรรมดา */
+    cursor: context-menu;
+}
+
 .button-green {
     background-color: white;
     color: black;
