--- a/src/components/chat/messages.css
+++ b/src/components/chat/messages.css
@@ -1,7 +1,10 @@
 /* src/components/chat/messages.css */
 
 .conversation-contaner>.messages {
-    flex-grow: 8;
+    /* flex-grow: 8; */
+    min-width: calc(100% - 250px);
+    max-width: calc(100% - 250px);
+    box-sizing: border-box;
     border: 1px solid #E5E5E5;
 }
 
@@ -41,6 +44,8 @@
 
 .conversation-contaner>.messages>.messages-show {
     background-color: #fff;
+    box-sizing: border-box;
+    /* width: 750px; */
 }
 
 
@@ -52,6 +57,7 @@
     display: flex;
     justify-content: flex-start;
     margin-bottom: 0.5em;
+    
 }
 
 .conversation-contaner>.messages>.messages-show>.message-box-own {
@@ -78,6 +84,10 @@
 
 
 /* ให้เวลาชิดซ้ายเอาไว้ */
+.conversation-contaner>.messages>.messages-show>.message-box>.display-text,
+.conversation-contaner>.messages>.messages-show>.message-box-own>.display-text {
+    max-width: 80%;
+}
 
 .conversation-contaner>.messages>.messages-show>.message-box>.display-text>.text-time,
 .conversation-contaner>.messages>.messages-show>.message-box-own>.display-text>.text-time {
@@ -96,17 +106,20 @@
 .conversation-contaner>.messages>.messages-show>.message-box-own>.display-text>.text {
     background-color: #e6e4e4;
     border-radius: 20px;
+    box-sizing: border-box;
+    position: relative;
     /* สุงขั้นต่ำ */
     min-height: 2em;
     font-size: 14px;
     line-height: 1.5em;
     padding: 0.2em 0.5em;
+    word-wrap: break-word;
 }
 /* ยาวสูงสุด 90% */
-.conversation-contaner>.messages>.messages-show>.message-box>.display-text>.text,
+/* .conversation-contaner>.messages>.messages-show>.message-box>.display-text>.text,
 .conversation-contaner>.messages>.messages-show>.message-box-own>.display-text>.text {
-    /* width: 90% */
-}
+    width: 90%
+} */
 /* ข้อความเจ้าของ */
 .conversation-contaner>.messages>.messages-show>.message-box-own>.display-text>.text {
     background-color: #b6eeb9;
